// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider> renders 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    pagingEnabled={false}
    removeClippedSubviews={true}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {caption} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "color": "#707070",
          },
          Object {},
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    pagingEnabled={false}
    removeClippedSubviews={true}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {children} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    pagingEnabled={false}
    removeClippedSubviews={true}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View>
      <View
        accessible={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#cdd2d4",
              },
              Object {
                "borderRadius": 3,
              },
              Object {
                "width": 168,
              },
              undefined,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "backgroundColor": "#F5F5F6",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderRadius": 3,
                  },
                  Object {
                    "opacity": 0.8,
                  },
                  Object {
                    "width": 168,
                  },
                  Object {
                    "height": 190,
                  },
                  false,
                  undefined,
                ],
              ]
            }
          >
            <Image
              onLoad={[Function]}
              resizeMode="center"
              source={
                Object {
                  "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 3,
                  },
                  Object {
                    "opacity": 0.8,
                  },
                  Object {
                    "width": 168,
                  },
                  Object {
                    "height": 190,
                  },
                  false,
                  undefined,
                ]
              }
            />
            <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="large"
              style={
                Array [
                  Object {
                    "position": "absolute",
                  },
                  false,
                ]
              }
            />
          </View>
          <View
            pointerEvents="none"
            style={
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "alignSelf": "center",
                "height": "100%",
                "justifyContent": "center",
                "left": 0,
                "padding": 8,
                "position": "absolute",
                "width": "100%",
              }
            }
          >
            <View />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#cdd2d4",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {dataSource} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    pagingEnabled={false}
    removeClippedSubviews={true}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 8,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -1.33,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#cdd2d4",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 8,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -1.33,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#cdd2d4",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {itemMargin} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    pagingEnabled={false}
    removeClippedSubviews={true}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={184}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 16,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 8,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -1.33,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#cdd2d4",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 16,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 8,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -1.33,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#cdd2d4",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {navigation} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "left": -16,
        },
      ]
    }
  >
    <View>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            Array [
              Object {
                "borderRadius": 3,
              },
              false,
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "borderRadius": 3,
                "justifyContent": "center",
              },
              Object {
                "height": 44,
                "minWidth": 44,
                "paddingHorizontal": 28,
              },
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              },
              Object {
                "height": 28,
                "minWidth": 28,
                "paddingHorizontal": 12,
              },
              false,
              false,
              Object {
                "paddingHorizontal": 0,
              },
              Object {
                "backgroundColor": "#707070",
              },
              false,
              false,
              false,
              false,
              false,
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../components/Icon/assets/left.png",
              }
            }
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "height": 20,
                  "width": 20,
                },
                undefined,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "right": -16,
        },
      ]
    }
  >
    <View>
      <View
        accessible={true}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            Array [
              Object {
                "borderRadius": 3,
              },
              false,
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "borderRadius": 3,
                "justifyContent": "center",
              },
              Object {
                "height": 44,
                "minWidth": 44,
                "paddingHorizontal": 28,
              },
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              },
              Object {
                "height": 28,
                "minWidth": 28,
                "paddingHorizontal": 12,
              },
              false,
              false,
              Object {
                "paddingHorizontal": 0,
              },
              Object {
                "backgroundColor": "#707070",
              },
              false,
              false,
              false,
              false,
              false,
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../components/Icon/assets/right.png",
              }
            }
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "height": 20,
                  "width": 20,
                },
                undefined,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    pagingEnabled={false}
    removeClippedSubviews={true}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {snap=false} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    horizontal={true}
    removeClippedSubviews={true}
    showsHorizontalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 8,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -1.33,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#cdd2d4",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 8,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -1.33,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#cdd2d4",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {steps} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    pagingEnabled={false}
    removeClippedSubviews={true}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={360}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 8,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -1.33,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#cdd2d4",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 8,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -1.33,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#cdd2d4",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {style} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "backgroundColor": "orange",
        "padding": 20,
      }
    }
    decelerationRate="fast"
    horizontal={true}
    pagingEnabled={false}
    removeClippedSubviews={true}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 8,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -1.33,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#cdd2d4",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 8,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -1.33,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#cdd2d4",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {title} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 20,
            "fontWeight": "700",
            "letterSpacing": -0.83,
            "lineHeight": 22,
          },
          false,
          Object {},
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    pagingEnabled={false}
    removeClippedSubviews={true}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View />
  </RCTScrollView>
</View>
`;
